# Swiftlet

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE
.cargo/: config.toml
audio/: Cargo.toml  build.rs
audio/examples/: loopback.rs  playback.rs  sine.rs
audio/src/: lib.rs  linux.rs  mac.rs  opus.rs  raw.rs  windows.rs
audio/src/linux/: alsa.rs  os.rs
audio/src/mac/: coreaudio.rs  os.rs
audio/src/windows/: os.rs  wasapi.rs
binaural/: Cargo.toml
binaural/examples/: demo.rs
binaural/src/: hrtf.rs  ild.rs  lib.rs  source.rs
docs/: search-index.js  src-files.js
docs/src/swiftlet_quic/: endpoint.rs.html  lib.rs.html
docs/src/swiftlet_quic/endpoint/: connection.rs.html  udp.rs.html
docs/swiftlet_quic/: all.html  enum.SocketAddr.html  index.html  sidebar-items.js  struct.EndpointHandler.html  trait.EndpointEventCallbacks.html
docs/swiftlet_quic/endpoint/: enum.ConnectionEndReason.html  enum.EndpointCloseReason.html  enum.Error.html  enum.SocketAddr.html  index.html  sidebar-items.js  struct.Config.html  struct.ConnectionId.html  struct.Endpoint.html  type.ConnectionId.html
docs/trait.impl/core/clone/: trait.Clone.js
docs/trait.impl/core/fmt/: trait.Debug.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/type.impl/std/: primitive.u64.js
graphics/: Cargo.toml  build.rs
graphics/examples/: basic.rs  color.rs  font.rs  primitives.rs  triangle.rs  triglyph.rs
graphics/src/: color.rs  font.rs  lib.rs  vulkan.rs
graphics/src/mac/: os.rs
graphics/src/vulkan/: WindowsShaderCompile.bat  api.rs  spirv.rs  triangle-font.frag.glsl  triangle-font.vert.glsl  triglyph.frag.glsl  triglyph.vert.glsl
graphics/src/vulkan/spirv/: def.rs
graphics/src/windows/: dxgi.rs  manifest.rs  os.rs
quic/: Cargo.toml  WindowsCreateDocs.bat
quic/examples/: simple.rs  timeout.rs
quic/examples/security/: cert.pem  pkey.pem
quic/src/: endpoint.rs  lib.rs
quic/src/endpoint/: connection.rs  udp.rs
quic/src/endpoint/udp/: mio.rs  windows.rs
src/: audio.rs  build.rs  client.rs  communication.rs  main.rs  network.rs
src/client/: audio.rs
src/network/: manage.rs  message.rs  protocol.rs  quic.rs  rtc.rs
src/network/quic/: connection.rs  udp.rs
src/network/rtc/: endpoint.rs
src/network/rtc/endpoint/: connection.rs  udp.rs
zig/: zar.bat  zar.sh  zcc.bat  zcc.sh
