# Media Enhanced Swiftlet Cargo
# Real-time Communication of Media over the Internet using QUIC

[package]
name = "swiftlet"
description = "real-time communication of media over the internet using quic"
version = "0.1.0"
authors = ["MediaEnhanced"]
repository = "https://github.com/MediaEnhanced/Swiftlet"
license = "MIT"

# Future Readme:
#readme = "README.md"

rust-version = "1.75"
edition = "2021"
publish = false
default-run = "swiftlet"

# The build script makes sure that the build target is a valid option
build = "src/build.rs"

# Disable Automatic Discovery
autobins = false
autoexamples = false
autotests = false
autobenches = false

[features]
default = ["client"]
client = ["dep:swiftlet_audio", "dep:swiftlet_graphics"]

[dependencies]
# Argument parsing
bpaf = { version = "*", features = ["derive"] }

# Thread Sync Requirements:
rtrb = "*"

# Client Graphics Requirements:
swiftlet_graphics = { version = "*", path = "graphics", optional = true }

# Server Terminal Requirements:
crossterm = "*"
ratatui = "*"

# Network (Thread) Requirements:
swiftlet_quic = { version = "*", path = "quic" }
# Maybe use a serialization library in the future
#bincode = { version = "2.0.0-rc.3" }

# Audio Requirements:
swiftlet_audio = { version = "*", path = "audio", features = ["opus"], optional = true }
#swiftlet_binaural = { version = "*", path = "binaural" }


[workspace]
resolver = "2"
members = [
  ".",
  "quic",
  "audio",
  "graphics",
  "binaural",
]

[workspace.lints.rust]
#unsafe_code = "forbid"
unreachable_pub = "warn"
single_use_lifetimes = "warn"
#missing_debug_implementations = "warn"
#rust_2018_idioms = "warn"

[lints]
workspace = true


[[bin]]
name = "swiftlet"
path = "./src/main.rs"
doc = false
test = false
harness = false
bench = false

[profile.release]
opt-level = 3
lto = true
panic = 'abort'
strip = true
codegen-units = 1
#debug = false
#debug-assertions = false
#rpath = false
