# Media Enhanced Swiftlet Audio Cargo
# Low Latency Audio OS I/O for Modern Platforms

[package]
name = "swiftlet_audio"
description = "low latency audio os i/o"
version = "0.1.0"
authors = ["MediaEnhanced"]
repository = "https://github.com/MediaEnhanced/Swiftlet"
license = "MIT"

# Future Readme:
#readme = "README.md"

edition = "2021"
rust-version = "1.75"

publish = false

# Disable Automatic Discovery
autobins = false
autoexamples = false
autotests = false
autobenches = false

#[features]
#opus-audio = ["opus"]

[dependencies]
opus = { version = "0.3.0", optional = true}

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
	"Win32_System_Com",
	"Win32_Media_Audio",
	"Win32_Foundation",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_Variant",
	"Win32_Media_KernelStreaming",
	"Win32_Media_Multimedia",
	"Win32_System_Threading",
	"Win32_Security",
]}

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = { version = "0.11.3", default-features = false, features = ["audio_unit", "core_audio"] }


[lib]
# Unnecessary Name since it matches the package name
#name = "swiftlet_audio"
path = "src/lib.rs"
# Rust Static Library:
crate-type = ["rlib"]
# No Documentation Yet
doc = false
# No Testing Yet
test = false
harness = false
doctest = false
bench = false
# Not a proc-macro library
proc-macro = false

