# Media Enhanced Swiftlet Binaural Cargo
# Converts Audio for Binaural Playback using HRTF Data

[package]
name = "swiftlet_binaural"
description = "binaural audio conversion"
version = "0.1.0"
authors = ["MediaEnhanced"]
repository = "https://github.com/MediaEnhanced/Swiftlet"
license = "MIT"

# Future Readme:
#readme = "README.md"

edition = "2021"
rust-version = "1.75"

publish = false

# Disable Automatic Discovery
autobins = false
autoexamples = false
autotests = false
autobenches = false


[dependencies]
nalgebra = { version = "0.32.3" }
rustfft = { version = "6.2.0" }


[lib]
# Unnecessary Name since it matches the package name
#name = "swiftlet_binaural"
path = "src/lib.rs"
# Rust Static Library:
crate-type = ["rlib"]
# No Documentation Yet
doc = false
# No Testing Yet
test = false
harness = false
doctest = false
bench = false
# Not a proc-macro library
proc-macro = false


[lints]
workspace = true


# Example Dependencies
[dev-dependencies]
cpal = "*"
swiftlet_audio = { version = "*", path = "../audio" }

[[example]]
name = "demo"
path = "examples/demo.rs"
crate-type = ["bin"]
doc = false
test = false
harness = false
bench = false
