# Media Enhanced Swiftlet Graphics Cargo
# Vulkan Graphics for Modern Platforms

[package]
name = "swiftlet_graphics"
description = "vulkan graphics"
version = "0.1.0"
authors = ["MediaEnhanced"]
repository = "https://github.com/MediaEnhanced/Swiftlet"
license = "MIT"

# Future Readme:
#readme = "README.md"

edition = "2021"
rust-version = "1.75"
publish = false

# Disable Automatic Discovery
autobins = false
autoexamples = false
autotests = false
autobenches = false

# Includes a build script that sets up cross-compiling
# and compiles the opus library from source only when 
# the opus feature is enabled
build = "build.rs"

[build-dependencies]
cc = { version = "1" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_Security",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging"
]}

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { path = "src/icrate/crates/objc2" }
objc2-foundation = { path = "src/icrate/framework-crates/objc2-foundation", features = [
	"Foundation_NSString",
	"Foundation_NSGeometry",
	"Foundation_NSNotification",
	"Foundation_NSObject",
	"Foundation_NSDate",
	"Foundation_NSThread",
	"Foundation_NSRunLoop",
	] }
objc2-app-kit = { path = "src/icrate/framework-crates/objc2-app-kit", features = [
	"AppKit_NSApplication",
	"AppKit_NSRunningApplication",
	"AppKit_NSGraphics",
	"AppKit_NSGraphicsContext",
	"AppKit_NSEvent",
	"AppKit_NSWindow",
	"AppKit_NSView",
	"AppKit_NSResponder",
	] }
#objc2-quartz-core = { path = "src/icrate/framework-crates/objc2-quartz-core", features = ["QuartzCore_CALayer", "QuartzCore_CAMediaTiming"] }

rustix = { version = "0.38", features = [
    "event",
]}

#[features]
#opus = []

[lib]
# Unnecessary Name since it matches the package name
#name = "swiftlet_audio"
path = "src/lib.rs"
# Rust Static Library:
crate-type = ["rlib"]
# No Documentation Yet
doc = false
# No Testing Yet
test = false
harness = false
doctest = false
bench = false
# Not a proc-macro library
proc-macro = false

[[example]]
name = "basic"
path = "examples/basic.rs"
crate-type = ["bin"]
doc = false
test = false
harness = false
bench = false

[[example]]
name = "color"
path = "examples/color.rs"
crate-type = ["bin"]
doc = false
test = false
harness = false
bench = false
