# Media Enhanced Swiftlet QUIC Cargo
# Useful for Real-time Internet Communications

[package]
name = "swiftlet_quic"
description = "real-time internet communications"
version = "0.1.0"
authors = ["MediaEnhanced"]
repository = "https://github.com/MediaEnhanced/Swiftlet"
license = "MIT"

# Future Readme:
#readme = "README.md"

edition = "2021"
rust-version = "1.75"

publish = false

# Disable Automatic Discovery
autobins = false
autoexamples = false
autotests = false
autobenches = false

[dependencies]
quiche = { version = "0.20" } # features = ["boringssl-boring-crate"]
ring = { version = "0.17" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
	"Win32_Networking_WinSock",
	"Win32_System_IO",
	"Win32_System_Threading",
	"Win32_Security",
	#Win32_System_Variant",
]}

[target.'cfg(target_os = "linux")'.dependencies]
# rustix instead of mio in future
mio = { version = "0.8", features = ["os-poll", "net"]}

[target.'cfg(target_os = "macos")'.dependencies]
# rustix instead of mio in future
mio = { version = "0.8", features = ["os-poll", "net"]}

[lib]
# Unnecessary Name since it matches the package name
#name = "swiftlet_quic"
path = "src/lib.rs"
# Rust Static Library:
crate-type = ["rlib"]
doc = true
# No Testing Yet
test = false
harness = false
doctest = false
bench = false
# Not a proc-macro library
proc-macro = false


[lints]
workspace = true


# Example Dependencies
[dev-dependencies]
crossterm = "*"

[[example]]
name = "simple"
path = "examples/simple.rs"
crate-type = ["bin"]
doc = false
test = false
harness = false
bench = false

[[example]]
name = "timeout"
path = "examples/timeout.rs"
crate-type = ["bin"]
doc = false
test = false
harness = false
bench = false
